--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -21,19 +21,19 @@ server {
 
     # Location rewrite
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
+        try_files $uri $uri/
     }
 
     location ~* \.php$ {
-    try_files $uri = 404;
-    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        try_files $uri = 404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
 
-    # PHP-FPM setup
-    # TODO: how to pass version from outside?
-    fastcgi_pass unix:/var/run/php/php7.1-fpm.sock;
-    fastcgi_index index.php;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    include fastcgi_params;
+        # PHP-FPM setup
+        # TODO: how to pass version from outside?
+        fastcgi_pass unix:/var/run/php/php7.1-fpm.sock;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+    }
 
     location ~ /\.ht {
         deny all;
