--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -25,14 +25,9 @@ server {
     }
 
     location ~* \.php$ {
-        try_files $uri = 404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
-
-        # PHP-FPM setup
-        # TODO: how to pass version from outside?
-        fastcgi_pass unix:/var/run/php/php7.1-fpm.sock;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass fpm;
         include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     }
 
     location ~ /\.ht {
